Fixed an alignment problem in the record field table

--- a/styles.css
+++ b/styles.css
@@ -219,8 +219,6 @@ a:hover  { color: #7C14B8; }
 
 h1.bibDisplayTitle { display:inline; font-size:1em; }
 
-.bibInfoData { vertical-align:top; }
-
 .bibInfoLabel, .resourceInfoLabel { color:#767C70; padding-right:.7em; text-align:right; vertical-align:top; font-weight:bold; font-style:normal; }
 
 .resourceInfoLabel  { width:15%; }
